--- a/index.html
+++ b/index.html
@@ -5,66 +5,93 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+    <!--HEADER-->
+    <header class="page-header">
+      <nav class="page-nav">
+        <a class="logo-link-header link" href="./index.html"
+          ><span class="part-logo">Web</span>Studio</a
+        >
+        <ul class="menu list">
+          <li class="menu-item">
+            <a class="menu-link link" href="./index.html">Studio</a>
+          </li>
+          <li class="menu-item">
+            <a class="menu-link link" href="./portfolio.html">Portfolio</a>
+          </li>
+          <li class="menu-item">
+            <a class="menu-link link" href="">Contacts</a>
+          </li>
         </ul>
       </nav>
       <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <ul class="contact-menu list">
+          <li class="contact-item">
+            <a class="contact-mail link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="contact-item">
+            <a class="contact-phone-number link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
         </ul>
       </address>
     </header>
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <!--HERO-->
+      <section class="hero-section">
+        <h1 class="main-title">Effective Solutions for Your Business</h1>
+        <button class="order-btn" type="button">Order Service</button>
       </section>
-      <section>
-        <h2>Advantages</h2>
-        <ul>
+      <!--ADVANTAGES-->
+      <section class="advanges-section">
+        <h2 hidden>Advantages</h2>
+        <ul class="advantages-list list">
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="secondary-title">Strategy</h3>
+            <p class="description">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="secondary-title">Punctuality</h3>
+            <p class="description">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="secondary-title">Diligence</h3>
+            <p class="description">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="secondary-title">Technologies</h3>
+            <p class="description">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>What are we doing</h2>
-        <ul>
-          <li>
+      <!--OUR PROJECT-->
+      <section class="project-section">
+        <h2 class="subtitle">What are we doing</h2>
+        <ul class="project-list list">
+          <li class="project-item">
             <img
               src="./images/full-version-site.jpg"
               alt="Full version of the site"
@@ -72,7 +99,7 @@
               height="300"
             />
           </li>
-          <li>
+          <li class="project-item">
             <img
               src="./images/mobile-version-site.jpg"
               alt="Mobile version of the site"
@@ -80,7 +107,7 @@
               height="300"
             />
           </li>
-          <li>
+          <li class="project-item">
             <img
               src="./images/mobile-app.jpg"
               alt="Mobile application"
@@ -90,57 +117,61 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
+      <!--OUR TEAM-->
+      <section class="team-section">
+        <h2 class="subtitle">Our Team</h2>
+        <ul class="workers-list list">
+          <li class="about-worker">
             <img
               src="./images/mark-guerrero.jpg"
               alt="Worker Mark Guerrero"
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="secondary-title">Mark Guerrero</h3>
+            <p class="description">Product Designer</p>
           </li>
-          <li>
+          <li class="about-worker">
             <img
               src="./images/tom-ford.jpg"
               alt="Worker Tom Ford"
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="secondary-title">Tom Ford</h3>
+            <p class="description">Frontend Developer</p>
           </li>
-          <li>
+          <li class="about-worker">
             <img
               src="./images/camila-garcia.jpg"
               alt="Worker Camila Garcia"
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="secondary-title">Camila Garcia</h3>
+            <p class="description">Marketing</p>
           </li>
-          <li>
+          <li class="about-worker">
             <img
               src="./images/daniel-wilson.jpg"
               alt="Worker Daniel Wilson"
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="secondary-title">Daniel Wilson</h3>
+            <p class="description">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <!--FOOTER-->
+    <footer class="page-footer">
+      <a class="logo-link-footer link" href="./index.html"
+        ><span class="part-logo">Web</span>Studio</a
+      >
+      <p class="description-footer">
         Increase the flow of customers and sales for your business with digital
-        marketing &#38; growth solutions.
+        marketing & growth solutions.
       </p>
     </footer>
   </body>
