--- a/index.html
+++ b/index.html
@@ -58,29 +58,29 @@
         <h2 hidden>Advantages</h2>
         <ul class="advantages-list list">
           <li>
-            <h3 class="secondary-title">Strategy</h3>
-            <p class="description">
+            <h3 class="section-subtitle">Strategy</h3>
+            <p class="section-description">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3 class="secondary-title">Punctuality</h3>
-            <p class="description">
+            <h3 class="section-subtitle">Punctuality</h3>
+            <p class="section-description">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3 class="secondary-title">Diligence</h3>
-            <p class="description">
+            <h3 class="section-subtitle">Diligence</h3>
+            <p class="section-description">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3 class="secondary-title">Technologies</h3>
-            <p class="description">
+            <h3 class="section-subtitle">Technologies</h3>
+            <p class="section-description">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -89,7 +89,7 @@
       </section>
       <!--OUR PROJECT-->
       <section class="project-section">
-        <h2 class="subtitle">What are we doing</h2>
+        <h2 class="section-title">What are we doing</h2>
         <ul class="project-list list">
           <li class="project-item">
             <img
@@ -119,7 +119,7 @@
       </section>
       <!--OUR TEAM-->
       <section class="team-section">
-        <h2 class="subtitle">Our Team</h2>
+        <h2 class="section-title">Our Team</h2>
         <ul class="workers-list list">
           <li class="about-worker">
             <img
@@ -128,8 +128,8 @@
               width="264"
               height="260"
             />
-            <h3 class="secondary-title">Mark Guerrero</h3>
-            <p class="description">Product Designer</p>
+            <h3 class="section-subtitle">Mark Guerrero</h3>
+            <p class="section-description">Product Designer</p>
           </li>
           <li class="about-worker">
             <img
@@ -138,8 +138,8 @@
               width="264"
               height="260"
             />
-            <h3 class="secondary-title">Tom Ford</h3>
-            <p class="description">Frontend Developer</p>
+            <h3 class="section-subtitle">Tom Ford</h3>
+            <p class="section-description">Frontend Developer</p>
           </li>
           <li class="about-worker">
             <img
@@ -148,8 +148,8 @@
               width="264"
               height="260"
             />
-            <h3 class="secondary-title">Camila Garcia</h3>
-            <p class="description">Marketing</p>
+            <h3 class="section-subtitle">Camila Garcia</h3>
+            <p class="section-description">Marketing</p>
           </li>
           <li class="about-worker">
             <img
@@ -158,8 +158,8 @@
               width="264"
               height="260"
             />
-            <h3 class="secondary-title">Daniel Wilson</h3>
-            <p class="description">UI Designer</p>
+            <h3 class="section-subtitle">Daniel Wilson</h3>
+            <p class="section-description">UI Designer</p>
           </li>
         </ul>
       </section>
@@ -169,7 +169,7 @@
       <a class="logo-link-footer link" href="./index.html"
         ><span class="part-logo">Web</span>Studio</a
       >
-      <p class="description-footer">
+      <p class="footer-description">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
