--- a/portfolio.html
+++ b/portfolio.html
@@ -50,6 +50,7 @@
     <main>
       <!--HERO-->
       <section class="services-page">
+        <h1 hidden>Services</h1>
         <ul class="sort-buttons-list list">
           <li><button class="sort-item" type="button">All</button></li>
           <li><button class="sort-item" type="button">Web Site</button></li>
@@ -65,8 +66,8 @@
               width="360"
               height="300"
             />
-            <h2 class="secondary-title">Banking App Interface Concept</h2>
-            <p class="description">App</p>
+            <h2 class="section-subtitle">Banking App Interface Concept</h2>
+            <p class="section-description">App</p>
           </li>
           <li class="services-list">
             <img
@@ -75,8 +76,8 @@
               width="360"
               height="300"
             />
-            <h2 class="secondary-title">Cashless Payment</h2>
-            <p class="description">Marketing</p>
+            <h2 class="section-subtitle">Cashless Payment</h2>
+            <p class="section-description">Marketing</p>
           </li>
           <li class="services-list">
             <img
@@ -85,8 +86,8 @@
               width="360"
               height="300"
             />
-            <h2 class="secondary-title">Meditaion App</h2>
-            <p class="description">App</p>
+            <h2 class="section-subtitle">Meditaion App</h2>
+            <p class="section-description">App</p>
           </li>
           <li class="services-list">
             <img
@@ -95,8 +96,8 @@
               width="360"
               height="300"
             />
-            <h2 class="secondary-title">Taxi Service</h2>
-            <p class="description">Marketing</p>
+            <h2 class="section-subtitle">Taxi Service</h2>
+            <p class="section-description">Marketing</p>
           </li>
           <li class="services-list">
             <img
@@ -105,8 +106,8 @@
               width="360"
               height="300"
             />
-            <h2 class="secondary-title">Screen Illustrations</h2>
-            <p class="description">Design</p>
+            <h2 class="section-subtitle">Screen Illustrations</h2>
+            <p class="section-description">Design</p>
           </li>
 
           <li class="services-list">
@@ -116,8 +117,8 @@
               width="360"
               height="300"
             />
-            <h2 class="secondary-title">Online Courses</h2>
-            <p class="description">Marketing</p>
+            <h2 class="section-subtitle">Online Courses</h2>
+            <p class="section-description">Marketing</p>
           </li>
           <li class="services-list">
             <img
@@ -126,8 +127,8 @@
               width="360"
               height="300"
             />
-            <h2 class="secondary-title">Instagram Stories Concept</h2>
-            <p class="description">Design</p>
+            <h2 class="section-subtitle">Instagram Stories Concept</h2>
+            <p class="section-description">Design</p>
           </li>
           <li class="services-list">
             <img
@@ -136,8 +137,8 @@
               width="360"
               height="300"
             />
-            <h2 class="secondary-title">Organic Food</h2>
-            <p class="description">Web Site</p>
+            <h2 class="section-subtitle">Organic Food</h2>
+            <p class="section-description">Web Site</p>
           </li>
           <li class="services-list">
             <img
@@ -146,8 +147,8 @@
               width="360"
               height="300"
             />
-            <h2 class="secondary-title">Fresh Coffee</h2>
-            <p class="description">Web Site</p>
+            <h2 class="section-subtitle">Fresh Coffee</h2>
+            <p class="section-description">Web Site</p>
           </li>
         </ul>
       </section>
@@ -156,7 +157,7 @@
       <a class="logo-link-footer link" href="./index.html"
         ><span class="part-logo">Web</span>Studio</a
       >
-      <p class="description-footer">
+      <p class="footer-description">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
